# RoadTrafficSimulator

./: CMakeLists.txt  README.md
Data/: animPath.txt  animPointsOut.txt  raaRobot.osg  roadStraight.osg  roadXJunction.osg  robBody.ac  robLowerArm.ac  robObj1.ac  robObj1.ac.bak  robObj2.ac  robObj3.ac  robTable2.ac
raaAssignment2/: CMakeLists.txt
raaAssignment2/Data/: raaTrafficLight.osgb  roadCurve.osg  roadTJunction.osg  roads.txt  robGround.ac  robHand.ac  robHand.ac.bak  robTable1.ac  robUpperArm.ac
raaAssignment2/raaAssignment2/: CMakeLists.txt  TrafficLightControl.cpp  TrafficLightControl.h  TrafficLightFacarde.cpp  TrafficLightFacarde.h  raaAnimatedFacarde.cpp  raaAnimatedFacarde.h  raaAnimationPathCallback.cpp  raaAnimationPathCallback.h  raaAnimationPointFinder.cpp  raaAnimationPointFinder.h  raaAssetLibrary.cpp  raaAssetLibrary.h  raaAssignment2.cpp  raaBoundCalculator.cpp  raaBoundCalculator.h  raaCarFacarde.cpp  raaCarFacarde.h  raaCollisionTarget.cpp  raaCollisionTarget.h  raaFacarde.cpp  raaFacarde.h  raaFinder.cpp  raaFinder.h  raaInputController.cpp  raaInputController.h  raaNodeCallbackFacarde.cpp  raaNodeCallbackFacarde.h  raaRoadTileFacarde.cpp  raaRoadTileFacarde.h  raaSwitchActivator.cpp  raaSwitchActivator.h  raaTrafficSystem.cpp  raaTrafficSystem.h
raaAssignment2/raaRoadTiles/: CMakeLists.txt  raaAnimPoint.cpp  raaAnimPoint.h  raaBoundingBoxCalculator.cpp  raaBoundingBoxCalculator.h  raaFinder.cpp  raaFinder.h  raaPrinter.cpp  raaPrinter.h  raaRoadTiles.cpp  raaSwitchControl.cpp  raaSwitchControl.h
